--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,9 @@
   </head>
 
   <body>
-
+    <nav>
+      <a href="/drones" style="text-decoration: none !important">Check the drones 🔍</a>
+    </nav>
     {{{body}}}
 
     <script src="/javascripts/script.js"></script>
