--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,12 @@
-<h2>Available drones</h2>
+<h1>🚀 Available drones 🚀</h1>
+
+<div>
+    {{#each drones}}
+        <hr>
+        <div>
+            <h2>Name: {{this.name}}</h2>
+            <h3>Propellers: {{this.propellers}}</h3>
+            <h3>Speed: {{this.maxSpeed}}</h3>
+        </div>
+    {{/each}}
+</div>
