--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,9 +10,12 @@
   </head>
 
   <body>
-    <nav>
-      <a href="/drones" style="text-decoration: none !important">Check the drones 🔍</a>
-    </nav>
+    
+    <ul style=" text-align: right; list-style: none; padding: 0; ">
+      <h3>Menu</h3>
+      <li><a href="/drones" style="text-decoration: none !important">Check the drones 🔍</a></li>
+      <li><a href="/drones/create" style="text-decoration: none !important">Create a new drone 🛠️</a></li>
+    </ul>
     {{{body}}}
 
     <script src="/javascripts/script.js"></script>
