--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -7,6 +7,7 @@
             <h2>Name: {{this.name}}</h2>
             <h3>Propellers: {{this.propellers}}</h3>
             <h3>Speed: {{this.maxSpeed}}</h3>
+            <a href="/drones/{{id}}/edit">Edit</a>
         </div>
     {{/each}}
 </div>
