--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,13 +1,14 @@
-<h2>Create a new drone</h2>
-
-<form action="/drones/create" method="post">
-    <label for="name">Name: </label>
-    <input id="name" type="text" name="name">
-    <br>
-    <label for="propellers">Propellers: </label>
-    <input id="propellers" type="text" name="propellers">
-    <br>
-    <label for="maxSpeed">Maximum speed: </label>
-    <input id="maxSpeed" type="text" name="maxSpeed">
-    <button type="submit">Submit</button>
-</form>
+<h1>🛠️ Create a new drone 🛠️</h1>
+<div  class="form">
+    <form action="/drones/create" method="post">
+        <label for="name">Name: </label>
+        <input id="name" type="text" name="name">
+        <br>
+        <label for="propellers">Propellers: </label>
+        <input id="propellers" type="text" name="propellers">
+        <br>
+        <label for="maxSpeed">Maximum speed: </label>
+        <input id="maxSpeed" type="text" name="maxSpeed">
+        <button type="submit" class="submit-btn">Submit</button>
+    </form>
+</div>
