--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,3 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>🚀 Express drones 🚀</h1>
+<h2>Fastest drones on earth!</h2>
+<iframe src="https://giphy.com/embed/tqLmOziFnB5nO" width="500" height="300" style="margin:auto" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/drone-tqLmOziFnB5nO">via GIPHY</a></p>
