--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,17 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{title}}</title>
+    <link rel="stylesheet" href="/stylesheets/reset.css" />
+    <link rel="stylesheet" href="/stylesheets/background.css" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
   <body>
-    
-    <ul style=" text-align: right; list-style: none; padding: 0; ">
-      <h3>Menu</h3>
-      <li><a href="/drones" style="text-decoration: none !important">Check the drones 🔍</a></li>
-      <li><a href="/drones/create" style="text-decoration: none !important">Create a new drone 🛠️</a></li>
+    <ul>
+      <li><a href="/" >Home 🏠</a></li>
+      <li><a href="/drones" >Check the drones 🔍</a></li>
+      <li><a href="/drones/create" >Create a new drone 🛠️</a></li>
     </ul>
-    {{{body}}}
+     
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+    <div class="content">
+      {{{body}}}
+    </div>
+    
+
 
     <script src="/javascripts/script.js"></script>
   </body>
